--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav>
-      <h1><a href="/Restaurant-Review-App/">Restaurant Reviews</a></h1>
+      <h1><a href="/Restaurant-Reviews-App/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
@@ -41,7 +41,7 @@
 
 
   <footer id="footer">
-    Copyright (c) 2017 <a href="/Restaurant-Review-App/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2017 <a href="/Restaurant-Reviews-App/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
 </body>
