--- a/restaurant.html
+++ b/restaurant.html
@@ -18,11 +18,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="/Restaurant-Reviews-App/">Restaurant Reviews</a></h1>
+      <h1><a href="./">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" >
-      <li><a href="/Restaurant-Reviews-App/">Home</a></li>
+      <li><a href="./">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
